update nutrition info

--- a/Locations/Brockway.html
+++ b/Locations/Brockway.html
@@ -43,7 +43,7 @@
     <section class="info-card">
       <h3>Location Info</h3>
       <ul>
-        <li><strong>Building:</strong> Brockway Hall</li>
+        <li><strong>Building:</strong> Second Floor of Brockway Hall</li>
         <li><strong>Type:</strong> All-you-care-to-eat dining hall</li>
         <li><strong>Payment:</strong> Meal plans, Points, Credit/Debit</li>
       </ul>
@@ -51,7 +51,7 @@
       <h3>Hours</h3>
       <table class="hours-table">
         <tr><th>Day</th><th>Hours</th></tr>
-        <tr><td>Monday–Thursday</td><td>7:00 AM – 8:00 PM</td></tr>
+        <tr><td>Monday–Thursday</td><td>11:00 AM – 7:30 PM</td></tr>
         <tr><td>Friday–Sunday</td><td>Closed</td></tr>
       </table>
     </section>
@@ -61,16 +61,16 @@
       <h3>Popular Stations</h3>
       <ul class="menu-list">
         <li>
-          <span class="item-name">Grill Station</span>
-          <span class="item-note">Burgers, chicken sandwiches, and fries made to order.</span>
+          <span class="item-name">Deli Station</span>
+          <span class="item-note">During Lunch hours get Freshly made Sandwhiches and Wraps.</span>
         </li>
         <li>
-          <span class="item-name">Fresh Greens Bar</span>
+          <span class="item-name">Salad Bar</span>
           <span class="item-note">Build-your-own salads with veggies, toppings, and dressings.</span>
         </li>
         <li>
-          <span class="item-name">Comfort Kitchen</span>
-          <span class="item-note">Rotating hot entrées like pasta, roasted chicken, and casseroles.</span>
+          <span class="item-name">Frozen Yogurt Machine</span>
+          <span class="item-note">Choose between 2 featured flvours and add your chocice of toppings.</span>
         </li>
       </ul>
 
