--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </a>
 
-        <a class="location-card" href="Raj_Madan.html" aria-label="Raj_Madan menu">
+        <a class="location-card" href="Locations/Raj.html" aria-label="Raj_Madan menu">
             <img src="images/Raj_Madan.jpg" alt="Raj Madan Cafe" loading="lazy">
             <div class="card-body">
                 <h3>Raj_Madan</h3>
